29 November 2021: Wouter
	- Merge PR #570 from rex4539: Fix typos.
	- Fix for #570: regen aclocal.m4, fix configure.ac for spelling.
	- Fix to make python module opt_list use opt_list_in.

15 November 2021: Tom
	- Improve EDNS option handling, now also works for synthesised
	  responses such as local-data and server.id CH TXT responses.

5 November 2021: George
	- Fix for #558: fix loop in comm_point->tcp_free when a comm_point is
	  reclaimed more than once during callbacks.
	- Fix for #558: clear the UB_EV_TIMEOUT bit before adding an event.

5 November 2021: Wouter
	- Fix that forward-zone name is documented as the full name of the
	  zone. It is not relative but a fully qualified domain name.
	- Fix analyzer review failure in rpz action override code to not
	  crash on unlocking the local zone lock.
	- Fix to remove unused code from rpz resolve client and action
	  function.
	- Merge #565: unbound.service.in: Disable ProtectKernelTunables again.

2 November 2021: Wouter
	- Fix #552: Unbound assumes index.html exists on RPZ host.

11 October 2021: Wouter
	- Fix chaos replies to have truncation for short message lengths,
	  or long reply strings.
	- Fix to protect custom regional create against small values.

4 October 2021: Wouter
	- Fix to add example.conf note for outbound-msg-retry.

27 September 2021: Wouter
	- Implement RFC8375: Special-Use Domain 'home.arpa.'.

21 September 2021: Wouter
	- For crosscompile on windows, detect 64bit stackprotector library.
	- Fix crosscompile shell syntax.
	- Fix crosscompile windows to use libssp when it exists.
	- For the windows compile script disable gost.
	- Fix that on windows, use BIO_set_callback_ex instead of deprecated
	  BIO_set_callback.
	- Fix crosscompile script for the shared build flags.

20 September 2021: Wouter
	- Fix crosscompile on windows to work with openssl 3.0.0 the
	  link with ws2_32 needs -l:libssp.a for __strcpy_chk.
	  Also copy results from lib64 directory if needed.

10 September 2021: Wouter